tests/NormalTests/paczka1/fuzzy1/94563007.err
Error in line 15: 1c8ySiQJUad A988 74,4
Error in line 20: 5rH6ky7e7hA S15 8,0
Error in line 27: ltQO A372 73,8
Error in line 17: fniwrD A819 64,5
Error in line 31: ltQO A819 66,5
Error in line 32: fniwrD S15 44,0
Error in line 25: 5rH6ky7e7hA A988 68,2
